@@ -30,4 +30,5 @@ TODO: openbsd requites stdint.h for intptr_t - why posix?
         - "fix" demo.c so that it works as non-root.
         - suppoert utimes seperately from futimes, as some systems have
           utimes but not futimes.
+        - use _POSIX_MEMLOCK_RANGE for mlock.
 
